# battle_field

./: .gitignore  README.md  main.tf  outputs.tf  scenarios.tf  variables.tf
.specstory/history/: 2025-05-04_07-17-aws環境でのペネトレーションテスト準備.md  2025-05-04_11-09-プロジェクトの状態確認.md
doc/: checklist.md  reqyurement_definition.md  task.md
examples/: iam_vulnerable.auto.tfvars.example  metasploitable2.auto.tfvars.example  terra_goat.auto.tfvars.example
modules/cloudgoat_min/: main.tf
modules/common/: main.tf  security_group.tf  ttl_destroyer.tf  vpc.tf
modules/common/notification/: create_lambda_package.sh  main.tf
modules/common/notification/lambda_function/: index.js
modules/common/ttl_destroyer/: main.tf
modules/iam_vulnerable/: main.tf
modules/juice_shop/: main.tf
modules/metasploitable2/: main.tf
modules/terra_goat/: main.tf
scripts/: check_cost.sh  run.sh  setup_budgets.py  setup_env.sh
scripts/python/: README.md  __init__.py  pyproject.toml  requirements.txt
scripts/python/aws/: __init__.py  budget.py  cost.py
scripts/python/cli/: __init__.py  run.py
scripts/python/utils/: __init__.py  logger.py
